--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+div {
+    border: none !important;
+}
+
 html {
     height: 100vh;
     display: flex;
@@ -5,14 +9,15 @@ html {
     align-items: center;
 }
 
+
 #container-principal {
     background: white;
     display: flex;
     align-items: center;
-    width: 1420px;
-    height: 680px;
+    width: 1220px;
+    height: 580px;
     margin: auto auto;
-    border: 2px solid #B2BABB;
+    border: 2px solid #B2BABB !important;
     border-radius: 30px;
     box-shadow: -3px -3px 7px #ffffff73, 3px 3px 5px rgba(94, 104, 121, .288);
 }
@@ -23,6 +28,7 @@ html {
     width: 200px;
     height: 160px;
     padding: 0;
+    border: 4px solid yellow;
 }
 
 #tucano-img {
@@ -38,6 +44,7 @@ html {
     width: 60%;
     height: 100%;
     padding: 0;
+    border: 4px solid black;
 }
 
 
@@ -52,34 +59,45 @@ html {
 
 #container-login {
     position: absolute;
-    bottom: auto;
-    top: 3%;
+    display: inline;
+    align-items: center;
+    top: 5%;
+    bottom: 5%;
     left: 30%;
     right: 0%;
     width: 60%;
     height: 90%;
-    border: 2px solid black;
-    padding: 1%;
+    padding: 0%;
+    border: 4px solid red;
 }
 
 #login-text {
-    margin-top: 5%;
+    display: flex;
+    justify-content: center;
+    margin-top: 10%;
     font-size: 40px;
     color: #2b2b2b;
+    border: 4px solid blue;
+    border-radius: 30px;
 }
 
 #container-login-inputs {
-    margin-top: 5%;
-    margin-left: 20%;
+    display: flex;
+    width: auto;
+    height: auto;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    justify-content: center;
+    border: 4px solid white;
 }
 
 label {
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .label-float{
     position: relative;
-    padding-top: 13px;
+    padding-top: 5%;
 }
   
 .label-float input{
@@ -128,11 +146,10 @@ content: "";
 
 .label-float input:focus + label,
 .label-float input:not(:placeholder-shown) + label{
-font-size: 13px;
+font-size: 15px;
 margin-top: 0;
 color: #282828;
 }
-
 
 .input {
     border-top: 0;
@@ -142,3 +159,74 @@ color: #282828;
     background-color: #FFC933;
     margin-top: 1%;
 }
+
+#container-button {
+    display: flex;
+    justify-content: center;
+    margin: 10% 0% 0% 0%;
+    border: 4px solid green;
+    border-radius: 30px;
+}
+
+#login-button {
+    background-color: #ff4267;
+    color: #282828;
+    font-size: 20px;
+    width: 100%;
+    border-radius: 30px;
+}
+
+#container-login2 {
+    margin-top: 5%;
+    padding: 0;
+    border: 4px solid blue;
+}
+
+#container-txt1 {
+    display: flex;
+    justify-content: center;
+    margin: 5% 0% 2% 0%;
+    border: 4px solid purple;
+}
+
+#container-outside-logo {
+    display: flex;
+    justify-content: center;
+    width: auto;
+    border: 2px solid brown;
+}
+
+.container-logos {
+    display: flex;
+    justify-content: center;
+    width: 60%;
+    height: auto;
+    border: 2px solid greenyellow;
+
+}
+
+.logo-img {
+    margin-right: auto;
+    margin-left: auto;
+}
+
+#container-links-outside-outside {
+    display: flex;
+    justify-content: center;
+    margin-top: 10%;
+    border: 2px solid black;
+}
+
+#container-links-outside {
+    display: block;
+    text-align: center;
+    margin-bottom: 1%;
+    padding: 1%;
+    border: 2px solid white;
+}
+
+#container-msg-links {
+    display: flex;
+    margin-bottom: 1%;
+}
+
