--- a/cadastrar.css
+++ b/cadastrar.css
@@ -25,6 +25,7 @@ body {
     align-items: center;
     max-width: 350px;
     min-height: 40vh;
+    padding: 2rem;
     /*border: 2px solid #282828 !important; */
     border-radius: 8px;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
