--- a/cadastrar.css
+++ b/cadastrar.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 * {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Candara', sans-serif;
 }
 div {
     border: none !important;
@@ -23,7 +23,7 @@ body {
     position: absolute;
     display: flex;
     align-items: center;
-    max-width: 350px;
+    max-width: 100vw;
     min-height: 40vh;
     padding: 2rem;
     /*border: 2px solid #282828 !important; */
