--- a/cadastrar.css
+++ b/cadastrar.css
@@ -26,8 +26,8 @@ body {
     align-items: center;
     max-width: 100vw;
     min-height: 40vh;
-    padding: 2rem;
-    /*border: 2px solid #282828 !important; */
+    padding: 1rem;
+    border: 2px solid #282828 !important;
     border-radius: 8px;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
 
@@ -42,8 +42,8 @@ body {
     align-items: center;
     width: 100%;
     height: 100%;
-    padding: 0%;
-    margin: auto;
+    padding: 0rem;
+    margin: 0rem;
     border: 4px solid red;
 }
 
@@ -63,7 +63,7 @@ body {
     height: auto;
     margin: 10% 0% 10% 0%;
     justify-content: center;
-    border: 4px solid white ;
+    border: 4px solid white;
 }
 
 label {
