--- a/cadastrar.css
+++ b/cadastrar.css
@@ -4,30 +4,29 @@
     font-family: 'Candara', sans-serif;
 }
 
-div {
-    border: none !important;
-}
-
 body {
-    min-height: 100vh;
-    min-width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-image: url("/background-waves.svg");
     background-repeat: no-repeat;
     background-size: cover;
+
+    min-width: 100vw;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
 }
 
-
-#container-principal {
-    position: absolute;
-    display: flex;
+#container-login {
+    display: block;
+    justify-content: center;
     align-items: center;
-    max-width: 100vw;
-    min-height: 40vh;
+    min-width: 25vw; /*aqui mexeu com oq eu queria*/
+    min-height: 70vh;
+    margin: auto;
     padding: 1rem;
-    border: 2px solid #282828 !important;
+
+    border: 4px solid black;
     border-radius: 8px;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
 
@@ -37,33 +36,32 @@ body {
     border: 1px solid rgba(255,255,255,0.075);
 }
 
-
-#container-login {
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    padding: 0rem;
-    margin: 0rem;
-    border: 4px solid red;
+#container-tucano {
+    position: relative;
+    width: 20%;
 }
 
+#tucano-img {
+    width: 100%;
+    height: 100%;
+}
 
 #login-text {
+    position: absolute;
+    top: 8%;
+    left: 15%;
+    width: 50%;
     font-size: 2rem;
     font-weight: 600;
     color: #282828;
-    margin-bottom: 2rem;
-    border: 4px solid blue;
-    border-radius: 30px;
 }
 
 #container-login-inputs {
     display: flex;
-    width: auto;
-    height: auto;
-    margin: 10% 0% 10% 0%;
+    width: 100%;
+    height: 100%;
+    margin: 5% 0% 10% 0%;
     justify-content: center;
-    border: 4px solid white;
 }
 
 label {
@@ -72,15 +70,15 @@ label {
 
 .label-float{
     position: relative;
-    padding-top: 5%;
+    padding-top: 1rem;
 }
   
 .label-float input{
 border: 0;
 border-bottom: 2px solid #282828;
 outline: none;
-min-width: 180px;
-font-size: 16px;
+min-width: 100%;
+font-size: 1.5rem;
 transition: all .3s ease-out;
 -webkit-transition: all .3s ease-out;
 -moz-transition: all .3s ease-out;
@@ -100,7 +98,7 @@ pointer-events: none;
 position: absolute;
 top: 0;
 left: 0;
-margin-top: 13px;
+margin-top: 10%;
 transition: all .3s ease-out;
 -webkit-transition: all .3s ease-out;
 -moz-transition: all .3s ease-out;
@@ -121,7 +119,7 @@ content: "";
 
 .label-float input:focus + label,
 .label-float input:not(:placeholder-shown) + label{
-font-size: 15px;
+font-size: 1rem;
 margin-top: 0;
 color: #282828;
 }
@@ -131,20 +129,15 @@ color: #282828;
     border-top: 0;
     border-left: 0;
     border-right: 0;
-    /*border-bottom: 2px solid #2b2b2b;*/
     margin-top: 1%;
     background: none;
     border-bottom: 1px solid rgba(255,255,255,0.1)
 }
 
-
-
 #container-button {
     display: flex;
     justify-content: center;
     margin: 10% auto 0% auto;
-    border: 4px solid green;
-    border-radius: 30px;
 }
 
 
@@ -152,8 +145,8 @@ color: #282828;
     background: #ff4267;
     color: #282828;
     font-size: 1.2rem;
-    width: 96%;
-    margin: auto;
+    width: 98%;
+    margin: 5% 0% 1% 0%;
     border-radius: 20px;
     transition: all 0.1s ease-in;
 }
@@ -164,25 +157,22 @@ color: #282828;
     width: 100%;
 }
 
-
 #container-login2 {
     margin-top: 5%;
     padding: 0;
-    border: 4px solid blue;
 }
 
 #container-txt1 {
     display: flex;
     justify-content: center;
     margin: 5% 0% 2% 0%;
-    border: 4px solid purple;
 }
 
 #container-outside-logo {
     display: flex;
     justify-content: center;
     width: auto;
-    border: 2px solid brown;
+    margin-bottom: 0;
 }
 
 .container-logos {
@@ -190,9 +180,8 @@ color: #282828;
     justify-content: center;
     width: 10vw;
     height: 5vh;
-    border: 2px solid greenyellow;
-
 }
+
 
 .logo-img {
     margin-right: auto;
@@ -203,19 +192,16 @@ color: #282828;
     display: flex;
     justify-content: center;
     margin-top: 10%;
-    border: 2px solid black;
 }
 
 #container-links-outside {
     display: block;
     text-align: center;
-    margin-bottom: 1%;
+    margin-bottom: 0%;
     padding: 1%;
-    border: 2px solid white;
 }
 
 #container-msg-links {
     display: flex;
-    margin-bottom: 1%;
+    margin-bottom: 2%;
 }
-
