--- a/cadastrar.css
+++ b/cadastrar.css
@@ -21,7 +21,7 @@ body {
     display: block;
     justify-content: center;
     align-items: center;
-    min-width: 20vw; /*aqui mexeu com oq eu queria*/
+    max-width: 100%; /*aqui mexeu com oq eu queria*/
     min-height: 70vh;
     margin: auto;
     padding: 1rem;
