--- a/cadastrar.css
+++ b/cadastrar.css
@@ -21,7 +21,7 @@ body {
     display: block;
     justify-content: center;
     align-items: center;
-    max-width: 100%; /*aqui mexeu com oq eu queria*/
+    max-width: 100vw; /*aqui mexeu com oq eu queria*/
     min-height: 70vh;
     margin: auto;
     padding: 1rem;
@@ -34,6 +34,10 @@ body {
     -webkit-backdrop-filter: blur(18px);
     backdrop-filter: blur(18px);
     border: 1px solid rgba(255,255,255,0.075);
+}
+
+#container-top {
+    margin-bottom: 10%;
 }
 
 #container-tucano {
