--- a/cadastrar.css
+++ b/cadastrar.css
@@ -81,7 +81,7 @@ label {
 border: 0;
 border-bottom: 2px solid #282828;
 outline: none;
-min-width: 100%;
+max-width: 100%;
 font-size: 1.5rem;
 transition: all .3s ease-out;
 -webkit-transition: all .3s ease-out;
