--- a/cadastrar.css
+++ b/cadastrar.css
@@ -9,7 +9,8 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 
-    min-width: 100vw;
+    max-width: 100vw;
+    min-width: 25vw;
     min-height: 100vh;
     display: flex;
     justify-content: center;
