--- a/cadastrar.css
+++ b/cadastrar.css
@@ -9,8 +9,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 
-    max-width: 100vw;
-    min-width: 25vw;
+    min-width: 100vw;
     min-height: 100vh;
     display: flex;
     justify-content: center;
@@ -22,8 +21,10 @@ body {
     display: block;
     justify-content: center;
     align-items: center;
-    max-width: 100vw; /*aqui mexeu com oq eu queria*/
-    min-height: 70vh;
+   max-width: 100vw; /*aqui mexeu com oq eu queria*/
+    min-width: 25vw;
+    min-height: 40vh;
+    max-height: 40vh;
     margin: auto;
     padding: 1rem;
 
